# book-vulkan_mastery_1

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Readme.md  VulkanBookPropsSheet.props
AndroidProjects/ComputeShader/: settings.gradle.kts
AndroidProjects/ComputeShader/app/: build.gradle.kts
AndroidProjects/ComputeShader/app/src/main/: AndroidManifest.xml
AndroidProjects/ComputeShader/app/src/main/cpp/: AndroidOut.h  CMakeLists.txt
AndroidProjects/ComputeShader/app/src/main/java/net/techbito/computeshader/: MainActivity.java
AndroidProjects/ComputeShader/app/src/main/res/values/: strings.xml  themes.xml
AndroidProjects/ComputeShader/app/src/main/res/values-night/: themes.xml
AndroidProjects/ComputeShader/gradle/wrapper/: gradle-wrapper.properties
AndroidProjects/DrawModel/: settings.gradle.kts
AndroidProjects/DrawModel/app/: build.gradle.kts
AndroidProjects/DrawModel/app/src/main/: AndroidManifest.xml
AndroidProjects/DrawModel/app/src/main/cpp/: CMakeLists.txt  main.cpp
AndroidProjects/DrawModel/app/src/main/java/net/techbito/drawmodel/: MainActivity.java
AndroidProjects/DrawModel/app/src/main/res/values/: strings.xml  themes.xml
AndroidProjects/DrawModel/app/src/main/res/values-night/: themes.xml
AndroidProjects/DrawModel/gradle/wrapper/: gradle-wrapper.properties
AndroidProjects/HelloTriangle/: settings.gradle.kts
AndroidProjects/HelloTriangle/app/: build.gradle.kts
AndroidProjects/HelloTriangle/app/src/main/: AndroidManifest.xml
AndroidProjects/HelloTriangle/app/src/main/cpp/: AndroidOut.cpp  CMakeLists.txt
AndroidProjects/HelloTriangle/app/src/main/java/net/techbito/hellotriangle/: MainActivity.java
AndroidProjects/HelloTriangle/app/src/main/res/values/: strings.xml  themes.xml
AndroidProjects/HelloTriangle/app/src/main/res/values-night/: themes.xml
AndroidProjects/HelloTriangle/gradle/wrapper/: gradle-wrapper.properties
AndroidProjects/Tessellation/: settings.gradle.kts
AndroidProjects/Tessellation/app/: build.gradle.kts
AndroidProjects/Tessellation/app/src/main/: AndroidManifest.xml
AndroidProjects/Tessellation/app/src/main/cpp/: CMakeLists.txt  main.cpp
AndroidProjects/Tessellation/app/src/main/java/net/techbito/tessellation/: MainActivity.java
AndroidProjects/Tessellation/app/src/main/res/values/: strings.xml  themes.xml
AndroidProjects/Tessellation/app/src/main/res/values-night/: themes.xml
AndroidProjects/Tessellation/gradle/wrapper/: gradle-wrapper.properties
Common/: PrepareAssimp.bat
Common/GLFW/lib/lib-vc2022/: glfw3_mt.lib  glfw3dll.lib
Common/include/: BasePlatform.h
Common/include/Volk/: volk.c
ComputeShader/: CMakeLists.txt  ComputeShader.sln  ComputeShader.vcxproj  ComputeShader.vcxproj.filters
ComputeShader/res/: compileShader.bat  shader.comp  shader.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
ComputeShader/src/: App.cpp  App.h  GfxDevice.cpp  GfxDevice.h  TextureUtility.cpp  TextureUtility.h  Window.cpp  Window.h  main.cpp
DrawModel/: CMakeLists.txt  DrawModel.sln  DrawModel.vcxproj  DrawModel.vcxproj.filters
DrawModel/res/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
DrawModel/src/: App.cpp  App.h  FileLoader.cpp  FileLoader.h  GfxDevice.cpp  GfxDevice.h  Model.cpp  Model.h  TextureUtility.cpp  TextureUtility.h
HelloTriangle/: CMakeLists.txt  Triangle.sln  Triangle.vcxproj  Triangle.vcxproj.filters
HelloTriangle/res/: compileShader.bat  shader.frag  shader.vert  shader.vert.spv
HelloTriangle/src/: App.cpp  App.h  FileLoader.cpp  GfxDevice.cpp  GfxDevice.h  SingleHeaderImpl.cpp
Tessellation/: CMakeLists.txt  Tessellation.sln  Tessellation.vcxproj  Tessellation.vcxproj.filters
Tessellation/res/: shader.frag  shader.frag.spv  shader.tesc  shader.tesc.spv  shader.tese  shader.tese.spv  shader.vert  shader.vert.spv
Tessellation/src/: App.cpp  App.h  GfxDevice.cpp  SingleHeaderImpl.cpp
